[package]
name = "rust-hyper-web"
version = "0.1.0"
authors = ["snwallet <snwallet@qq.com>"]
edition = "2018"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
