[package]
name = "rust-hyper-web"
version = "0.1.0"
authors = ["snwallet <snwallet@qq.com>"]
edition = "2018"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

url = "2.2"